--- a/app/src/main/res/layout/content_drawer.xml
+++ b/app/src/main/res/layout/content_drawer.xml
@@ -9,4 +9,13 @@
     tools:context="com.edwinacubillos.itaguitur.DrawerActivity"
     tools:showIn="@layout/app_bar_drawer">
 
+    <ListView
+        android:id="@+id/lista"
+        android:layout_width="344dp"
+        android:layout_height="495dp"
+        tools:layout_editor_absoluteY="8dp"
+        tools:layout_editor_absoluteX="8dp">
+    </ListView>
+
+
 </android.support.constraint.ConstraintLayout>
